--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@supabase/supabase-js": "^2.39.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "stripe": "^14.0.0",
+    "@stripe/stripe-js": "^2.4.0"
   }
 }
