--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "qrcode": "^1.5.3",
     "stripe": "^14.0.0",
-    "@stripe/stripe-js": "^2.4.0"
+    "@stripe/stripe-js": "^2.4.0",
+    "@stripe/react-stripe-js": "^2.4.0"
   }
 }
